--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@module-federation/enhanced": "~0.6.0",
+    "@nestjs/schematics": "^10.0.1",
     "@nx/cypress": "19.8.4",
     "@nx/eslint": "19.8.4",
     "@nx/eslint-plugin": "19.8.4",
     "@nx/jest": "19.8.4",
     "@nx/js": "19.8.4",
+    "@nx/nest": "^19.8.4",
     "@nx/react": "^19.8.4",
     "@nx/web": "19.8.4",
     "@nx/webpack": "19.8.4",
